# bletchley

./: .gitignore  Cargo.toml  LICENSE
_experiments/01_simple_crypt/: private.pem  public.pem
_experiments/01_simple_crypt/python/: crypt_test.py
_experiments/01_simple_crypt/rust/: Cargo.toml
_experiments/01_simple_crypt/rust/src/: main.rs
_experiments/02_qml/: Cargo.toml
_experiments/02_qml/src/: main.rs
bletchley_ffi/: Cargo.toml  test.py
bletchley_ffi/src/: lib.rs
bletchley_lib/: Cargo.toml
bletchley_lib/src/: lib.rs
bletchley_lib/src/ble/: format.rs
bletchley_lib/src/crypto/: encryptor.rs
qml/: ContactsPage.qml  CryptPage.qml  main.qml
src/: main.rs
src/app/: db.rs  gui.rs  mod.rs
src/ble/: format.rs
src/crypto/: decryptor.rs  encryptor.rs  key_generator.rs  mod.rs
