[package]
name = "bletchley"
version = "0.1.0"
authors = ["Paweł Świątkowski"]

[dependencies]
openssl = "0.9.12"
clap = "~2.19.0"
rand = "0.3.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3"
serde_json = "0.9"
qml = { git = "https://github.com/White-Oak/qml-rust.git" }
rusqlite = "0.11.0"
lazy_static = "0.2.8"
